--- a/Web/src/main/resources/application.properties
+++ b/Web/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password=oracle
 
 mybatis.mapper-locations=classpath:com/jake/web/dao/mybatis/mapper/*.xml
 
+spring.mvc.hiddenmethod.filter.enabled=true
+
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.favor-path-extension=true
 spring.mvc.contentnegotiation.media-types.xls=application/vnd.ms-excel
